samples/_failures_safe/1761336272_b6a3c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00156443.c: In function ‘main’:
./samples/SAFE/__tmp_00156443.c:132:17: error: expected expression at end of input
  132 |                 matrix_subtract(rows, cols,
      |                 ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_00156443.c:132:17: error: too few arguments to function ‘matrix_subtract’
./samples/SAFE/__tmp_00156443.c:33:6: note: declared here
   33 | void matrix_subtract(int rows, int cols, int a[rows][cols], int b[rows][cols], int result[rows][cols]) {
      |      ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_00156443.c:132:17: error: expected declaration or statement at end of input
  132 |                 matrix_subtract(rows, cols,
      |                 ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_00156443.c:132:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00156443.c:132:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00156443.c:132:17: error: expected declaration or statement at end of input
